<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="theme_switch">Тёмная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="user_lic_text">Пользовательское соглашение</string>

    <string name="android_dev_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_header">Поделиться через</string>
    <string name="user_email">sand-nlp@ya.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="album_cover_descript">Обложка альбома</string>
    <string name="placeholder">Placeholder</string>
    <string name="refreshBtnText">Обновить</string>
    <string name="noResultMessage">Ничего не нашлось</string>
    <string name="noConnectMessage">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clearHistoryBtnCaption">Очистить историю</string>
    <string name="youSearchHead">Вы искали</string>
    <string name="noContentIconDescript">Контент по запросу не найден</string>
    <string name="noConnectIconDescript">Нет подключения к сети</string>
    <string name="country_name">Страна</string>
    <string name="countryNamePlaceholder">Великобритания</string>
    <string name="genreName">Жанр</string>
    <string name="genreNamePlaceholder">Rock</string>
    <string name="yearTrack">Год</string>
    <string name="yearTrackPlaceholder">1965</string>
    <string name="albumName">Альбом</string>
    <string name="albumNamePlaceholder">Yesterday (Remastered 2009)</string>
    <string name="trackDuration">Длительность</string>
    <string name="trackDurationPlaceholder">5:35</string>
    <string name="trackPlayPositionPlaceholder">00:00</string>
    <string name="add_track_to_playlist">Add track to playlist</string>
    <string name="play_track">Play track</string>
    <string name="add_track_to_favorities">Add track to favorities</string>
    <string name="artistNamePlaceholder">The Beatles</string>
    <string name="trackNamePlaceholder">Yesterday (Remastered 2009)</string>
    <string name="album_cover">Album Cover</string>
    <string name="clear_text">Clear text</string>
    <string name="search_button">Search button</string>
    <string name="player_not_ready">Плеер не готов к работе, состояние: %1$s</string>
    <string name="not_load_previewTrack">Трек не загрузился или у трека нет превью, попробуйте другой трек и проверьте настройки сети</string>
    <string name="theme_checker">theme_checker</string>
    <string name="sendApp">Поделиться приложением</string>
    <string name="tabLayoutDescription">Описание для tabLayout</string>
    <string name="noFavorites">Ваша медиатека пуста</string>
    <string name="newPlaylistBtnText">Новый плейлист</string>
    <string name="noPlaylist">Вы не создали\nни одного плейлиста</string>
    <string name="libraryTitle">Медиатека</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="content_description">Просто изображение</string>
    <string name="new_pl_name">Название*</string>
    <string name="new_pl_descr">Описание</string>
    <string name="create_pl_btn_capt">Создать</string>
    <string name="pl_cover_desc">Playlist_Cover</string>
    <string name="pl_cover_descr">Обложка плейлиста</string>
    <string name="pl_name">Название плейлиста</string>
    <string name="pl_descr">Описание плейлиста</string>
    <string name="addPlaylistTitle">Добавить в плейлист</string>
    <string name="newPlaylistBtnCapt">Новый плейлист</string>
    <string name="pl_name_placeholder">Название плейлиста</string>
    <string name="pl_trackcount_placeholder">Количество треков</string>
    <string name="pl_toast_text">Плейлист %s создан</string>
    <string name="pl_dialog_title">Завершить создание плейлиста?</string>
    <string name="pl_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="pl_dialog_ok">Завершить</string>
    <string name="pl_dialog_cancel">Отмена</string>
    <string name="new_pl_toolbar_title">Новый плейлист</string>
    <string name="add_track_error_1">Трек уже добавлен в плейлист %s</string>
    <string name="add_track_error_2">Ошибка добавления трека в плейлист</string>
    <string name="add_track_error_3">Нет ID трека</string>
    <string name="new_pl_add_message">Добавлено в плейлист %s</string>
    <string name="checkPLName_message">Нужно указать название плейлиста</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d треков</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
