<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Base.Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.activity.MainActivity">

    <TextView
        android:id="@+id/head_text"
        style="@style/Base.Theme.PlaylistMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/big_padding"
        android:text="@string/playlist_maker"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_text"
        app:icon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_text"
        app:layout_constraintBottom_toTopOf="@+id/library_button"
        app:layout_constraintHeight_default="spread"
        style="@style/mainActivityButton" />

    <Button
        android:id="@+id/library_button"
        android:text="@string/library_text"
        app:icon="@drawable/library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintHeight_default="spread"
        style="@style/mainActivityButton"/>

    <Button
        android:id="@+id/settings_button"
        android:text="@string/settings_text"
        app:icon="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="spread"
        style="@style/mainActivityButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>