<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:theme="@style/Theme.SearchView"
    tools:ignore="UseCompoundDrawables">

    <Button
        android:id="@+id/playlist_upd_button"
        style="@style/refreshBtnStyle"
        android:layout_marginTop="@dimen/dp24_size"
        android:text="@string/newPlaylistBtnText" />

    <LinearLayout
        android:id="@+id/pl_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/playlistFragmentIcon"
            style="@style/fragmentIconPlaceholder"
            android:layout_marginTop="@dimen/dp30_size"
            android:contentDescription="@string/placeholder" />

        <TextView
            android:id="@+id/playlistFragmentPlacholderText"
            style="@style/fragment_text_placeholder"
            android:gravity="center"
            android:text="@string/noPlaylist" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:layout_margin="@dimen/big_padding"
        android:visibility="visible"/>


</LinearLayout>
