<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:src="@drawable/add_photo"
        app:layout_constraintBottom_toTopOf="@id/input_edit_text"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        style="@style/pl_cover" />

    <EditText
        android:id="@+id/input_edit_text"
        android:hint="@string/new_pl_name"
        android:layout_marginTop="@dimen/dp32_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderImage"
        style="@style/new_pl_edit_field" />

    <EditText
        android:id="@+id/descript_edit_text"
        android:hint="@string/new_pl_descr"
        android:layout_marginTop="@dimen/big_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_edit_text"
        style="@style/new_pl_edit_field" />


    <Button
        android:id="@+id/createButton"
        android:text="@string/create_pl_btn_capt"
        app:cornerRadius="@dimen/medium_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/new_pl_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
